--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -133,11 +133,11 @@ if ($this->countDownloadsOverall > 0) {
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                    
-        <div class="col-md-4 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+        <div class="col-md-3 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
 <?php
         } else {
 ?>
-        <div class="col-md-6 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+        <div class="col-md-5 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
 <?php
         }
 ?>        
@@ -346,11 +346,11 @@ if ($this->countDownloadsOverall > 0) {
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                
-                <div class='col-md-7 text-right'><?=$sum_total_text?></div>
+                <div class='col-md-6 text-right'><?=$sum_total_text?></div>
 <?php
         } else {
 ?>
-                <div class='col-md-9 text-right'><?=$sum_total_text?></div>
+                <div class='col-md-8 text-right'><?=$sum_total_text?></div>
 <?php
         }
 ?>            
@@ -414,7 +414,7 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(**) The Payout-New will become active on May 2019.</p>
+        <p>(**) The Potential Payout will become active on May 2019.</p>
     </div>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
