--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -71,6 +71,11 @@ $userRoleName = $helperUserRole->userRole();
         <span class=" col-lg-6">spam reports</span>
         <span class="col-lg-6 value"> <?= $this->product->amount_reports ?></span>
     </div>
+
+    <div class="row">
+        <span class=" col-lg-6">misuse reports</span>
+        <span class="col-lg-6 value"> <?= $this->fetchMisuseReports($this->product->project_id)?></span>
+    </div>
      <?php endif; ?>
 
     <?php /**
@@ -90,26 +95,42 @@ $userRoleName = $helperUserRole->userRole();
      * </div>
      **/ ?>
 
-    <?php if (Zend_Auth::getInstance()->hasIdentity()) {  ?>    
         <div class="row" style="padding-top: 5px">
             <div class="col-lg-12">
                 <div class="small " id="product-actions">
-                    <a data-toggle="modal" data-target="#report-product-<?= $this->product->project_id ?>" role="button"
-                       href="#report-product-<?= $this->product->project_id ?>">
-                        <span class="glyphicon glyphicon-alert"></span> Report SPAM
-                    </a>
 
-                    <span style="padding-left: 20px;">
-                    <a data-toggle="modal" data-target="#report-product-fraud-<?= $this->product->project_id ?>" role="button"
-                       href="#report-product-fraud-<?= $this->product->project_id ?>">
-                        <span class="glyphicon glyphicon-alert"></span> Report Misuse
-                    </a>
+                      <span style="padding-right: 20px;">
+                            <?php if (Zend_Auth::getInstance()->hasIdentity()) {  ?>    
+                                <a data-toggle="modal" data-target="#report-product-fraud-<?= $this->product->project_id ?>" role="button"
+                                   href="#report-product-fraud-<?= $this->product->project_id ?>">
+                                    <span class="glyphicon glyphicon-alert"></span> Report Misuse
+                                </a>
+                            <?php }else{ ?>
+                                    <a data-toggle="modal" data-target="#like-product-modal" role="button">
+                                                  <span class="glyphicon glyphicon-alert"></span> Report Misuse
+                                    </a>
+                            <?php } ?>
                     </span>
+
+                  
+
+                    <?php if (Zend_Auth::getInstance()->hasIdentity()) {  ?>    
+                           <a data-toggle="modal" data-target="#report-product-<?= $this->product->project_id ?>" role="button"
+                           href="#report-product-<?= $this->product->project_id ?>">
+                            <span class="glyphicon glyphicon-alert"></span> Report SPAM
+                        </a>
+                    <?php }else{ ?>
+                            <a data-toggle="modal" data-target="#like-product-modal" role="button">
+                                   <span class="glyphicon glyphicon-alert"></span> Report SPAM
+                            </a>
+                    <?php } ?>
+
+                  
                   
                 </div>
             </div>
         </div>
-    <?php } ?>
+   
   
     <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
         <span class="page-views">
