--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -32,6 +32,7 @@ $helperImage = new Default_View_Helper_Image();
 $helperPrintDate = new Default_View_Helper_PrintDate();
 $textCountryCity = $this->member->city;
 $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
+$helperMemberScore = new Default_View_Helper_FetchMemberScore();
 
 $isSupporter = $this->stat['donationIssupporter'];
 
@@ -371,6 +372,18 @@ $plingcatid = $config->settings->member->plingcat->id;
 
 
                     <aside class="col-md-4 col-lg-4 col-sm-4 col-xs-12">
+                        <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') { ?>
+                        <?php 
+                            $scoreArray= $helperMemberScore->fetchScore($this->member->member_id);
+                        ?>
+                        <div class="col-container">
+                            <div class="well details about">
+                                <div>
+                                    <span>Score: <?php echo $scoreArray['score']; ?> <div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Member Score" data-trigger="hover" data-html="true" data-content="The score is calculated from the following values:<br> <ul><li>Products: <?php echo $scoreArray['count_product'];?> * <?php echo $scoreArray['factor_prod'];?></li><li>Plings: <?php echo $scoreArray['count_pling'];?> * <?php echo $scoreArray['factor_pling'];?></li><li>Likes: <?php echo $scoreArray['count_like'];?> * <?php echo $scoreArray['factor_like'];?></li><li>Comments: <?php echo $scoreArray['count_comment'];?> * <?php echo $scoreArray['factor_comment'];?></li><li>Years of membership: <?php echo $scoreArray['count_years_membership'];?> * <?php echo $scoreArray['factor_year'];?></li><li>Spam-Reports: <?php echo $scoreArray['count_report_product_spam'];?> * <?php echo $scoreArray['factor_report_prod_spam'];?></li><li>Misuse-Reports: <?php echo $scoreArray['count_report_product_fraud'];?> * <?php echo $scoreArray['factor_report_prod_fraud'];?></li></ul>"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div> </span>
+                                </div>
+                            </div>
+                        </div>
+                        <?php } ?>
                         <div class="col-container">
                             <div class="well details about">
                                 <h3>About me</h3>
@@ -485,7 +498,8 @@ $plingcatid = $config->settings->member->plingcat->id;
             AboutMePage.setup("'.$this->member->username.'");
             AboutMeMyProjectsPaging.setup();
             AboutMeMyProjectsPagingButton.setup();        
-             TooltipUser.setup("tooltipuser","right");        
+            TooltipUser.setup("tooltipuser","right");   
+            $(\'[data-toggle="popover"]\').popover();
         });
     ');
 
