--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -133,11 +133,11 @@ if ($this->countDownloadsOverall > 0) {
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                    
-        <div class="col-md-4 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+        <div class="col-md-3 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
 <?php
         } else {
 ?>
-        <div class="col-md-6 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+        <div class="col-md-5 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
 <?php
         }
 ?>        
@@ -154,8 +154,8 @@ if ($this->countDownloadsOverall > 0) {
         }
 ?>        
         
-        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Plings" data-trigger="hover" data-html="true" data-content="Plings = 1 System Pling + Supporter Plings for that product."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
-        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong style="color: red;">Payout-New**</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout-New" data-trigger="hover" data-html="true" data-content="This new Payout will become active in May 2019."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong style="color: #BBB">Plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Plings" data-trigger="hover" data-html="true" data-content="Plings = 1 System Pling + Supporter Plings for that product."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong style="color: #BBB">Potential Payout**</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Potential Payout" data-trigger="hover" data-html="true" data-content="This new Payout will become active in May 2019."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
     </div>
 </div>
 <div class="tab-content">
@@ -197,11 +197,11 @@ if ($this->countDownloadsOverall > 0) {
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                    
-                    <div class="col-md-4 text-left cell-default">
+                    <div class="col-md-3 text-left cell-default">
 <?php
         } else {
 ?>
-                    <div class="col-md-6 text-left cell-default">
+                    <div class="col-md-5 text-left cell-default">
 <?php
         }
 ?>
@@ -291,7 +291,7 @@ if ($this->countDownloadsOverall > 0) {
                                 $show_plings_sum = '-';
                             }
                         ?>
-                        <span><?= $show_plings_sum ?></span>
+                        <span style="color: #BBB"><?= $show_plings_sum ?></span>
                     </div>
                     <div class="col-md-1 text-right cell-default">
                         <?php if(!$showErrMsg) {
@@ -311,7 +311,7 @@ if ($this->countDownloadsOverall > 0) {
                                     $show_payout_new_sum = $payout_sum_new;
                                 }
                         ?>
-                        <span><?= $currency->toCurrency($show_payout_new_sum) ?></span>
+                        <span style="color: #BBB"><?= $currency->toCurrency($show_payout_new_sum) ?></span>
                         <?php } else { ?>
                         <span>&nbsp;</span>
                         <?php } ?>
@@ -346,11 +346,11 @@ if ($this->countDownloadsOverall > 0) {
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                
-                <div class='col-md-7 text-right'><?=$sum_total_text?></div>
+                <div class='col-md-6 text-right'><?=$sum_total_text?></div>
 <?php
         } else {
 ?>
-                <div class='col-md-9 text-right'><?=$sum_total_text?></div>
+                <div class='col-md-8 text-right'><?=$sum_total_text?></div>
 <?php
         }
 ?>            
@@ -366,7 +366,7 @@ if ($this->countDownloadsOverall > 0) {
         }
 ?>                
                 <div class='col-md-1 text-right'></div>
-                <div class='col-md-1 text-right'><strong style="color: red;"><?=$sum_total_payout_new?></strong></div>
+                <div class='col-md-1 text-right'><strong style="color: #BBB"><?=$sum_total_payout_new?></strong></div>
                 
             </div>
             
@@ -394,7 +394,7 @@ if ($this->countDownloadsOverall > 0) {
             }
 
             if (($sum_total_month/100) < 1) {
-                echo '<div class="alert alert-warning" role="alert">We only pay out money if the amount is over $1.</div>';
+                echo '<div class="alert alert-warning" role="alert">We only pay out money if the total sum is over $1.</div>';
             }
 ?>
             
@@ -414,7 +414,7 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(**) The Payout-New will become active on May 2019.</p>
+        <p>(**) The Payout is planned to become active on May 2019.</p>
     </div>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
