--- a/application/modules/default/views/scripts/misuse/list.phtml
+++ b/application/modules/default/views/scripts/misuse/list.phtml
@@ -110,7 +110,7 @@
                                 </div>
 
                                 <div class="reportInfo" style="padding-top: 25px;font-size: medium">
-                                    <b>Report-by: <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['report_member_id']) ?>"><?php echo $this->product['report_username'] ?></a> <?php echo $reportTime ?></b>
+                                    <b>Reported by <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['report_member_id']) ?>"><?php echo $this->product['report_username'] ?></a> <?php echo $reportTime ?></b>
                                 </div>
                                 
                                 <div class="reportInfo" style="padding-top: 5px;font-size: medium">
